[package]
name = "deploy"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tempfile = "3.17.0"
tree-sitter = "0.25.1"
tree-sitter-go = "0.23.4"
walkdir = "2.5.0"

[build-dependencies]
cc="*"
